docs: Mark P2 #9, #11 as VERIFIED - facade/adapter patterns in use
- #9: UnifiedMetadataManager is already a FACADE pattern
- #11: ColumnManager is a LEGACY ADAPTER delegating to service

Both use appropriate architectural patterns, no consolidation needed.

--- a/docs/20260116_report.md
+++ b/docs/20260116_report.md
@@ -516,9 +516,9 @@ Run `ruff check --select F401` to identify unused imports automatically. Current
 | 6 | ~~P1~~ | COMPLETED (2026-01-19) - Deprecated shims removed | ~~6 shim files~~ | Low | Verified |
 | 7 | ~~P1~~ | REMOVED (2026-01-20) - HashService dead code removed (270 lines) | ~~services/hash_service.py~~ | Low | 35 tests pass |
 | 8 | ~~P2~~ | VERIFIED (2026-01-20) - File managers well-separated | ~~core/file/~~ | Low | Verified |
-| 9 | P2 | Consolidate metadata managers | `core/metadata/*.py` (7 managers) | Medium | `pytest tests/test_metadata*` |
+| 9 | ~~P2~~ | VERIFIED (2026-01-20) - UnifiedMetadataManager is facade | ~~core/metadata/~~ | Low | Verified |
 | 10 | ~~P2~~ | VERIFIED (2026-01-20) - Docstrings already comprehensive | ~~Various~~ | Low | Verified |
-| 11 | P2 | Reduce `ui_managers/` count | 7 files → 3-4 | Medium | UI regression tests |
+| 11 | ~~P2~~ | VERIFIED (2026-01-20) - ColumnManager is legacy adapter | ~~ui_managers/~~ | Low | Verified |
 | 12 | ~~P2~~ | VERIFIED (2026-01-20) - Large modules are cohesive | ~~shutdown_coordinator.py~~ | Low | Verified |
 | 13 | P2 | Add type hints to remaining untyped code | Various | Low | `mypy` |
 | 14 | P2 | Flatten MainWindow delegate indirection | `ui/main_window_delegates/` | High | Manual UI testing |
